# HPC

./: .gitignore  CMakeLists.txt  cuda.cu  cvTest.cpp  mpi.cpp  oldCuda.cu  oldopenmp.cpp  openMP.cpp  serial.cpp
